<?xml version="1.0"?>
<package format="2">
  <name>vvcm_fk</name>
  <version>0.0.1</version>
  <description>The vvcm_fk package</description>
  <author>Weijian Zhang</author>
  <maintainer email="wxz163@student.bham.ac.uk">Weijian Zhang</maintainer>
  <license>LGPLv3</license>
  <buildtool_depend>catkin</buildtool_depend>

  <depend>roscpp</depend>
  <depend>geometry_msgs</depend>
  <depend>std_msgs</depend>
  <depend>visualization_msgs</depend>
  <depend>interactive_markers</depend>
</package>